--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
