--- a/pom.xml
+++ b/pom.xml
@@ -8,25 +8,34 @@
     <artifactId>selenium-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <selenium.version>2.53.0</selenium.version>
+        <selenium.htmlunitdriver.version>2.52.0</selenium.htmlunitdriver.version>
+        <junit.version>4.12</junit.version>
+        <hamcrest.all.version>1.3</hamcrest.all.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.47.1</version>
+            <version>${selenium.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-htmlunit-driver</artifactId>
+            <version>${selenium.htmlunitdriver.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.all.version}</version>
         </dependency>
-
     </dependencies>
 
 </project>
