--- a/.gitignore
+++ b/.gitignore
@@ -11,17 +11,6 @@
 
 # Build directories
 target
-node_modules/
 
-# Build and test files
-*.log*
-*.lck
-
-# OS generated files
-.DS_Store
-ehthumbs.db
-Icon?
-Thumbs.db
-
-#log
-*.log
+# Drivers
+tools
