--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <selenium.htmlunitdriver.version>2.52.0</selenium.htmlunitdriver.version>
         <junit.version>4.12</junit.version>
         <hamcrest.all.version>1.3</hamcrest.all.version>
+        <webdriver.chrome>tools/chromedriver</webdriver.chrome>
+        <webdriver.marionette>tools/wires</webdriver.marionette>
     </properties>
 
     <dependencies>
@@ -38,4 +40,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <webdriver.chrome.driver>${webdriver.chrome}</webdriver.chrome.driver>
+                        <webdriver.gecko.driver>${webdriver.marionette}</webdriver.gecko.driver>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
