--- a/pom.xml
+++ b/pom.xml
@@ -68,4 +68,82 @@
             </plugin>
         </plugins>
     </build>
+
+    <!--The addition of these profiles is linked to section_35_ci_junit_suites -->
+
+    <profiles>
+        <profile>
+            <id>richardtest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/ExampleSuiteTest.class</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <webdriver.chrome.driver>${webdriver.chrome}</webdriver.chrome.driver>
+                                <!--For now I am going to use an older version of Firefox and therefore do not require the Marionette driver-->
+                                <!--See the readme for more information-->
+                                <!--UPDATE - I am now trying it out (from Section 18 onwards)-->
+                                <webdriver.gecko.driver>${webdriver.marionette}</webdriver.gecko.driver>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>richardanothertest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/AnotherExampleSuiteTest.class</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <webdriver.chrome.driver>${webdriver.chrome}</webdriver.chrome.driver>
+                                <!--For now I am going to use an older version of Firefox and therefore do not require the Marionette driver-->
+                                <!--See the readme for more information-->
+                                <!--UPDATE - I am now trying it out (from Section 18 onwards)-->
+                                <webdriver.gecko.driver>${webdriver.marionette}</webdriver.gecko.driver>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>richardalltests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/ExampleSuiteTest.class</include>
+                                <include>**/AnotherExampleSuiteTest.class</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <webdriver.chrome.driver>${webdriver.chrome}</webdriver.chrome.driver>
+                                <!--For now I am going to use an older version of Firefox and therefore do not require the Marionette driver-->
+                                <!--See the readme for more information-->
+                                <!--UPDATE - I am now trying it out (from Section 18 onwards)-->
+                                <webdriver.gecko.driver>${webdriver.marionette}</webdriver.gecko.driver>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 </project>
